2005-05-10  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontrollerlist.[ch]: some more stuff: up/down
	buttons, remember the dialogs' size and positions, misc stuff.

	* app/widgets/gimpcontrollereditor.c
	(gimp_controller_editor_edit_clicked): use a GimpViewableDialog
	now that GimpControllerInfo is a GimpViewable.

	* app/dialogs/dialogs.c: added a foreign entry for the controller
	editor dialog. Allow the controller editors and its event mapping
	dialogs to exist multiple times.

	* app/dialogs/preferences-dialog.c (prefs_notebook_append_page):
	create the pages' event boxes with input-only windows.

2005-05-09  Helvetix Victorinox  <helvetix@gimp.org>

	* app/composite/gimp-composite-sse2.c: Repaired a latent bug in
	gimp_composite_lighten_rgba8_rgba8_rgba8_sse2 where setting up
	the alpha masks were not done correctly.  A redundant (better?)
	fix to bug #164061

	Use movntq instructions to avoid processor cache pollution.

	Some adjustments to register allocation specifications.

2005-05-09  DindinX  <dindinx@gimp.org>

	* plug-ins/common/grid.c: use the correct bounds for the spinners.
	This is related to #114225. Spotted by Lomaxx.

2005-05-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff.c: sprinkled some const qualifiers.

2005-05-09  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpcontrollerlist.[ch]: new widget which allows
	adding/removing controllers using two lists of available/active
	controllers. Work in progress...

	* app/widgets/gimpcontrollerinfo.[ch]: derive it from GimpViewable
	so it can have an icon (unfinished). Added convenience constructor
	gimp_controller_info_new().

	* app/dialogs/preferences-dialog.c: use a GimpControllerList
	instead of a notebook of GimpControllerEditors.

2005-05-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/Makefile.am: removed traces of plug-ins/common,

2005-05-09  Sven Neumann  <sven@gimp.org>
