@@ -20,11 +20,17 @@
  * Boston, MA 02111-1307, USA.
  */
 
-#ifndef __GIMP_CONTROLLER_WHELL_H__
+#ifndef __GIMP_CONTROLLER_INFO_H__
 #define __GIMP_CONTROLLER_INFO_H__
 
 
 #include "core/gimpviewable.h"
+
+
+typedef gboolean (* GimpControllerEventSnooper) (GimpControllerInfo        *info,
+                                                 GimpController            *controller,
+                                                 const GimpControllerEvent *event,
+                                                 gpointer                   user_data);
 
 
 #define GIMP_TYPE_CONTROLLER_INFO            (gimp_controller_info_get_type ())
@@ -39,13 +45,16 @@ typedef struct _GimpControllerInfoClass GimpControllerInfoClass;
 
 struct _GimpControllerInfo
 {
-  GimpViewable    parent_instance;
+  GimpViewable                parent_instance;
 
-  gboolean        enabled;
-  gboolean        debug_events;
+  gboolean                    enabled;
+  gboolean                    debug_events;
 
-  GimpController *controller;
-  GHashTable     *mapping;
+  GimpController             *controller;
+  GHashTable                 *mapping;
+
+  GimpControllerEventSnooper  snooper;
+  gpointer                    snooper_data;
 };
 
 struct _GimpControllerInfoClass
@@ -59,13 +68,17 @@ struct _GimpControllerInfoClass
 };
 
 
-GType    gimp_controller_info_get_type        (void) G_GNUC_CONST;
+GType    gimp_controller_info_get_type          (void) G_GNUC_CONST;
 
-GimpControllerInfo * gimp_controller_info_new (GType               type);
+GimpControllerInfo * gimp_controller_info_new   (GType                       type);
 
-void     gimp_controller_info_set_enabled     (GimpControllerInfo *info,
-                                               gboolean            enabled);
-gboolean gimp_controller_info_get_enabled     (GimpControllerInfo *info);
+void     gimp_controller_info_set_enabled       (GimpControllerInfo         *info,
+                                                 gboolean                    enabled);
+gboolean gimp_controller_info_get_enabled       (GimpControllerInfo         *info);
+
+void     gimp_controller_info_set_event_snooper (GimpControllerInfo         *info,
+                                                 GimpControllerEventSnooper  snooper,
+                                                 gpointer                    snooper_data);
 
 
 #endif /* __GIMP_CONTROLLER_INFO_H__ */
